--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ discussed in the forum, etc.:
 
 
 	yukihiro saito <yukky@ubi.cs.ritsumei.ac.jp>
+	#mijin593
 
 
 Feel free to add your name to this list.
